[gd_scene load_steps=9 format=3 uid="uid://b70w7s5k2wnp7"]

[ext_resource type="Texture2D" uid="uid://cjctj2jd5s8rp" path="res://Resources/Textures/Search.svg" id="1_5igej"]
[ext_resource type="Script" path="res://Scripts/BaseUIComponents/AutoSuggestBox.gd" id="1_tydxs"]
[ext_resource type="Theme" uid="uid://bpke6yqti6gcx" path="res://Resources/Themes/LineEdit-Light.tres" id="2_11ije"]
[ext_resource type="PackedScene" uid="uid://d2870yealvg0d" path="res://Scenes/ThemePainter.tscn" id="3_17n3h"]
[ext_resource type="Texture2D" uid="uid://1342meeys5vy" path="res://Resources/Textures/Clear.svg" id="3_b8y4k"]
[ext_resource type="Theme" uid="uid://c7vkhqml4gcnr" path="res://Resources/Themes/SmallButton-Light.tres" id="4_4a7a6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8721u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tf2lk"]
draw_center = false
border_width_bottom = 2
border_color = Color(0, 0.403922, 0.752941, 1)
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="AutoSuggestBox" type="PanelContainer"]
offset_right = 506.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_8721u")
script = ExtResource("1_tydxs")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = -2

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("2_11ije")
theme_override_font_sizes/font_size = 20
caret_blink = true

[node name="ThemePainter" parent="VBoxContainer/LineEdit" instance=ExtResource("3_17n3h")]

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/LineEdit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/LineEdit/MarginContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 2

[node name="ClearButton" type="Button" parent="VBoxContainer/LineEdit/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 8
mouse_default_cursor_shape = 2
theme = ExtResource("4_4a7a6")
theme_override_constants/icon_max_width = 20
icon = ExtResource("3_b8y4k")
icon_alignment = 1

[node name="ThemePainter" parent="VBoxContainer/LineEdit/MarginContainer/HBoxContainer/ClearButton" instance=ExtResource("3_17n3h")]

[node name="SearchButton" type="Button" parent="VBoxContainer/LineEdit/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 8
mouse_default_cursor_shape = 2
theme = ExtResource("4_4a7a6")
theme_override_constants/icon_max_width = 20
icon = ExtResource("1_5igej")
icon_alignment = 1

[node name="ThemePainter" parent="VBoxContainer/LineEdit/MarginContainer/HBoxContainer/SearchButton" instance=ExtResource("3_17n3h")]

[node name="FocusEnteredLine" type="PanelContainer" parent="VBoxContainer/LineEdit"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 2)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tf2lk")

[connection signal="focus_entered" from="VBoxContainer/LineEdit" to="." method="_on_line_edit_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/LineEdit" to="." method="_on_line_edit_focus_exited"]
[connection signal="text_changed" from="VBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="VBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="VBoxContainer/LineEdit/MarginContainer/HBoxContainer/ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LineEdit/MarginContainer/HBoxContainer/SearchButton" to="." method="_on_search_button_pressed"]
